--- a/biodata.html
+++ b/biodata.html
@@ -2,6 +2,7 @@
     <title>
         Personal blog
     </title>
+    <link rel="stylesheet" href="bio.css">
     <marquee><u><b>
       <font color="red">WELCOME  TO  MY  WEB  PAGE</font>
     </b>
