--- a/ca1.html
+++ b/ca1.html
@@ -6,7 +6,7 @@
         <tr><th><a href="biodata.html">Home</a></th><th><a href="pact2.html">Students</a></th><th><a href="part2 pac2.html">Apple</a></th><th><a href="ca1.html">Books</a></th><th><a href="part3 pac2.html">End</a></tr>
     </table>
     <body bgcolor="#E8F8F5">
-        <h1 align="center"><b> 
+        <h1 align="center" style="font-size: 70px;font-weight: 600; background-image: linear-gradient(to left, #1aff00, #ff0000);color: transparent;background-clip: text;-webkit-background-clip: text;"><b> 
             FAVORITE BOOKS
 
     </b>
@@ -17,7 +17,7 @@
         </u>
     </h2>
     
-    <table border="1" height="100" width="1250">
+    <table border="1" height="100" width="1500">
         <tr bgcolor="grey" align="center"><td>Sr.no</td><td>Book Title</td><td>Author</td><td>Cover Page</td><td>Discription</td></tr>
         <tr bgcolor="cyan" align="center"><td>1.</td><td>The Big Bang Theory</td><td>Bill Prady</td><td width="100"><a href="https://en.wikipedia.org/wiki/The_Big_Bang_Theory"><img src="bbt.jfif" height="150" width="100"></a></td><td width="500">The lives of four socially awkward friendstake a wild turn when they meet the beautiful and free-spirited Penny.</td></tr>
         <tr bgcolor="white" align="center"><td>2.</td><td>Pshychology of Money</td><td>James Clear</td><td><a href="https://static.booktopia.com.au/pdf/9780857197689-1.pdf"><img src="money.jfif" height="150" width="100"></a></td><td width="500">Doing well with money isn't necessarily about what you know. It's about how you behave. And behavior is hard to teach, even to really smart people.</td></tr>
