--- a/biodata.html
+++ b/biodata.html
@@ -18,9 +18,8 @@
           width: auto;
           height: auto;
           z-index: -1;
+          filter: blur(3px);
       }
-
-      /* Optional: Add additional styling for content on top of the video */
       .content {
           position: absolute;
           top: 50%;
@@ -36,19 +35,13 @@
       <font color="red">WELCOME  TO  MY  WEB  PAGE</font>
     </b>
     </u></marquee>
-    <table bgcolor="silver" align="center" border="6" width="50%">
+    <table bgcolor="transparent" align="center" border="1" width="50%">
       <tr><th><a href="biodata.html">Home</a></th><th><a href="pact2.html">Students</a></th><th><a href="part2 pac2.html">Apple</a></th><th><a href="ca1.html">Books</a></th><th><a href="part3 pac2.html">End</a></tr>
     </table>
     <body align="center">
       <video autoplay muted loop>
-        <source src="grasp-of-the-abyss-moewalls-com.mp4" type="video/mp4">
-        Your browser does not support the video tag.
-    </video>
-
-    <!-- Optional: Add content on top of the video -->
-    <div class="content">
-        <p>Your content goes here.</p>
-    </div>
+        <source src="traditional-japanese-house-sunny-day-moewalls-com.mp4" type="video/mp4">
+      </video>
         <h1 align="center"><u><b> 
             BIODATA
 
