--- a/ca1.html
+++ b/ca1.html
@@ -2,10 +2,27 @@
     <title>
         Continuous Assessment for Practical 1 & 2
     </title>
+    <style>
+         video {
+          position: absolute;
+          top: 50%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          min-width: 100%;
+          min-height: 100%;
+          width: auto;
+          height: auto;
+          z-index: -1;
+          filter: blur(3px);
+      }
+    </style>
     <table  align="center" border="" width="100%">
         <tr><th><a href="biodata.html">Home</a></th><th><a href="pact2.html">Students</a></th><th><a href="part2 pac2.html">Apple</a></th><th><a href="ca1.html">Books</a></th><th><a href="part3 pac2.html">End</a></tr>
     </table>
     <body bgcolor="#E8F8F5">
+        <video autoplay loop>
+            <source src="traditional-japanese-house-sunny-day-moewalls-com.mp4" type="video/mp4">
+          </video>
         <h1 align="center" style="font-size: 70px;font-weight: 600; background-image: linear-gradient(to left, #1aff00, #ff0000);color: transparent;background-clip: text;-webkit-background-clip: text;"><b> 
             FAVORITE BOOKS
 
